abstracted assert method from testing framework

--- a/specRunner.html
+++ b/specRunner.html
@@ -3,8 +3,9 @@
     <title>
       Mike's amazing testing framework for JS
     </title>
-    <script src="./spec/note-modelSpec.js"></script>
-    <script src="./src/note-modelSpec.js"></script>
+    <script src="assert.js"></script>
+    <script src="src/note-model.js"></script>
+    <script src="spec/note-modelSpec.js"></script>
     </head>
   <body>
   </body>
