single note view becuase why not tbh, this really is dying for another similarly named class

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Honestly shockingly amazing notes app, never seen before wow</title>
   </head>
   <body>
-    <div id='app'> text
+    <div id='app'> You'll never see this 
     </div>
   </body>
 </html>
