--- a/specRunner.html
+++ b/specRunner.html
@@ -5,9 +5,11 @@
     </title>
     <script src="assert.js"></script>
     <script src="src/note-model.js"></script>
+    <script src="src/single_note_view.js"></script>
     <script src="src/note-list-view.js"></script>
     <script src="src/note-list-model.js"></script>
     <script src="spec/note-modelSpec.js"></script>
+    <script src="spec/single_note_viewSpec.js"></script>
     <script src="spec/note-list-viewSpec.js"></script>
     <script src="spec/note-list-modelSpec.js"></script>
     </head>
